--- a/app/views/articles/news.html.erb
+++ b/app/views/articles/news.html.erb
@@ -1,7 +1,9 @@
 <%= title @page_title %>
+<% description @news_cat.description %>
+<% keywords @news_cat.keywords %>
 
-<a href="#" id="sitelogo"></a>
-    <a href="#" id="mobilelogo" style="display:none;"></a>
+<a href="/" id="sitelogo"></a>
+    <a href="/" id="mobilelogo" style="display:none;"></a>
     <section id="news" class="wrapper group center">
     	<h1>Новости</h1>
         	<div class="inside scrollpane">
