--- a/app/views/articles/show_news.html.erb
+++ b/app/views/articles/show_news.html.erb
@@ -1,7 +1,9 @@
 <% title @one.title %>
+<% description @one.description %>
+<% keywords @one.keywords %>
 
-<a href="#" id="sitelogo"></a>
-    <a href="#" id="mobilelogo" style="display:none;"></a>
+<a href="/" id="sitelogo"></a>
+    <a href="/" id="mobilelogo" style="display:none;"></a>
     <section id="projects" class="wrapper group center">
     	<h1><%= @one.title %></h1>
             <div class="inside scrollpane">
@@ -9,12 +11,6 @@
                 	<div class="thumbnail"><%= image_tag @one.image, class: "img-resp" %></div>
                     	<div class="text">
                         <%= @one.body.html_safe %>
-                        <form>
-                        	<input type="text" name="name" placeholder="Имя">
-                            <input type="tel" name="tel" placeholder="Телефон" class="error">
-                            <textarea placeholder="Сообщение" name="text" class="error"></textarea>
-                            <button type="submit" class="gradient">Отправить</button>
-                        </form>
                         </div>
                 </div>
             </div>
