--- a/app/views/articles/show_project.html.erb
+++ b/app/views/articles/show_project.html.erb
@@ -1,14 +1,20 @@
 <%= title @one.title %>
+<% description @one.description %>
+<% keywords @one.keywords %>
 
 
-<a href="#" id="sitelogo"></a>
-    <a href="#" id="mobilelogo" style="display:none;"></a>
+<a href="/" id="sitelogo"></a>
+    <a href="/" id="mobilelogo" style="display:none;"></a>
     <section id="projects" class="wrapper group center">
     	<h1><%= @one.title %></h1>
         	<nav>
             	<ul class="group">
             <% for sub in @subcategories %>    
-                <li><a href="<%= sub.id %>" <%= 'class="active"' if sub.id == @one.id %> > <%= sub.title %></a></li>
+            <% if sub.id == @one.id %>    
+                <li><%= link_to sub.title, "/projects/#{sub.id}-#{sub.slug}", class: "active" %></li>
+            <% else %>
+                <li><%= link_to sub.title, "/projects/#{sub.id}-#{sub.slug}" %></li>
+            <% end %>    
             <% end %>  
                 </ul>
             </nav>
@@ -17,12 +23,7 @@
                 	<div class="thumbnail"><%= image_tag @one.image, class: "img-resp" %></div>
                     	<div class="text">
                         <%= @one.body.html_safe %>
-                        <form>
-                        	<input type="text" name="name" placeholder="Имя">
-                            <input type="tel" name="tel" placeholder="Телефон" class="error">
-                            <textarea placeholder="Сообщение" name="text" class="error"></textarea>
-                            <button type="submit" class="gradient">Отправить</button>
-                        </form>
+                        
                         </div>
                 </div>
             </div>
