--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,7 +1,21 @@
+<div class="row">   
+                    <div class="col-lg-12">
+                    
+<h1 class="page-header"><%= @company.title %></h1>
+                        <ol class="breadcrumb">
+                            <li class="active">
+                                <i class="fa fa-dashboard"></i> <%= link_to "Админка", admin_path %>
+                            </li>
+                            <li class="active">
+                                <i class="fa fa-dashboard"></i> <%= link_to "О компании", posts_path %>
+                            </li>
+                        </ol>
+<div class="row">
+<div class="col-lg-12">
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Title:</strong>
+  <strong>Название:</strong>
   <%= @company.title %>
 </p>
 
@@ -11,29 +25,30 @@
 </p>
 
 <p>
-  <strong>Menupunkt:</strong>
+  <strong>Пункт меню:</strong>
   <%= @company.menupunkt %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>meta Description:</strong>
   <%= @company.description %>
 </p>
 
 <p>
-  <strong>Keywords:</strong>
+  <strong>meta Keywords:</strong>
   <%= @company.keywords %>
 </p>
 
 <p>
-  <strong>Image:</strong>
-  <%= @company.image %>
+  <strong>Картинка:</strong>
+  <%= image_tag @company.image %>
 </p>
 
 <p>
-  <strong>Body:</strong>
+  <strong>Контент:</strong>
   <%= @company.body %>
 </p>
 
-<%= link_to 'Edit', edit_company_path(@company) %> |
-<%= link_to 'Back', companies_path %>
+<%= link_to 'Изменить', edit_company_path(@company) %> |
+<%= link_to 'Назад', companies_path %>
+</div></div></div></div>
