--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,16 +1,29 @@
-<h1>Listing categories</h1>
-
-<table>
+                  <div class="row">   
+                    <div class="col-lg-12">
+                    
+<h1 class="page-header">Список категорий</h1>
+                        <ol class="breadcrumb">
+                            <li class="active">
+                                <i class="fa fa-dashboard"></i> <%= link_to "Админка", admin_path %>
+                            </li>
+                            <li class="active">
+                                <i class="fa fa-dashboard"></i> Категории
+                            </li>
+                        </ol>
+<div class="row">
+                    <div class="col-lg-12">
+<div class="table-responsive">                        
+<table class="table table-bordered table-hover">
   <thead>
     <tr>
-      <th>Title</th>
+      <th>Название</th>
       <th>Slug</th>
-      <th>Description</th>
-      <th>Keywords</th>
-      <th>Punktmenu</th>
-      <th>Image</th>
-      <th>Body</th>
-      <th>Parent</th>
+      <th>meta Description</th>
+      <th>meta Keywords</th>
+      <th>Пункт меню</th>
+      <th>Картинка</th>
+      <th>Контент</th>
+      <th>Родитель</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,17 +36,20 @@
         <td><%= category.description %></td>
         <td><%= category.keywords %></td>
         <td><%= category.punktmenu %></td>
-        <td><%= category.image %></td>
+        <td><%= image_tag category.image %></td>
         <td><%= category.body %></td>
-        <td><%= category.parent_id %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= item_parent(category.parent_id) %></td>
+        <td><%= link_to 'Просмотр', category %></td>
+        <td><%= link_to 'Изменить', edit_category_path(category) %></td>
+        <td><%= link_to 'Удалить', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+</div></div></div>
 <br>
 
-<%= link_to 'New Category', new_category_path %>
+<%= link_to 'Новая категория', new_category_path %>
+
+</div>
+                </div>
