--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,6 +1,23 @@
-<h1>Editing company</h1>
+<div class="row">   
+                    <div class="col-lg-12">
+                    
+<h1 class="page-header">Изменить <%= @company.title %></h1>
+                        <ol class="breadcrumb">
+                            <li class="active">
+                                <i class="fa fa-dashboard"></i> <%= link_to "Админка", admin_path %>
+                            </li>
+                            <li class="active">
+                                <i class="fa fa-dashboard"></i> <%= link_to "О компании", companies_path %>
+                            </li>
+                            <li class="active">
+                                <i class="fa fa-dashboard"></i> <%= @company.title %>
+                            </li>
+                        </ol>
+<div class="row">
+<div class="col-lg-12">
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @company %> |
 <%= link_to 'Back', companies_path %>
+</div></div></div></div>
