--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,15 +1,29 @@
-<h1>Listing companies</h1>
+<div class="row">   
+                    <div class="col-lg-12">
+                    
+<h1 class="page-header">О компании</h1>
+                        <ol class="breadcrumb">
+                            <li class="active">
+                                <i class="fa fa-dashboard"></i> <%= link_to "Админка", admin_path %>
+                            </li>
+                            <li class="active">
+                                <i class="fa fa-dashboard"></i> О компании
+                            </li>
+                        </ol>
+<div class="row">
+                    <div class="col-lg-12">
+<div class="table-responsive">      
 
-<table>
+<table class="table table-bordered table-hover">
   <thead>
     <tr>
-      <th>Title</th>
+      <th>Название</th>
       <th>Slug</th>
-      <th>Menupunkt</th>
-      <th>Description</th>
-      <th>Keywords</th>
-      <th>Image</th>
-      <th>Body</th>
+      <th>Пункт меню</th>
+      <th>meta Description</th>
+      <th>meta Keywords</th>
+      <th>Картинка</th>
+      <th>Контент</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,11 +36,11 @@
         <td><%= company.menupunkt %></td>
         <td><%= company.description %></td>
         <td><%= company.keywords %></td>
-        <td><%= company.image %></td>
+        <td><%= image_tag company.image %></td>
         <td><%= company.body %></td>
-        <td><%= link_to 'Show', company %></td>
-        <td><%= link_to 'Edit', edit_company_path(company) %></td>
-        <td><%= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Просмотр', company %></td>
+        <td><%= link_to 'Изменить', edit_company_path(company) %></td>
+        <td><%= link_to 'Удалить', company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -34,4 +48,5 @@
 
 <br>
 
-<%= link_to 'New Company', new_company_path %>
+<%= link_to 'Новая запись о компании', new_company_path %>
+</div></div></div></div></div>
