--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -14,6 +14,77 @@
 </head>
 <body>
 
-<%= yield %>
+<% if notice %>
+  <p class="alert alert-success"><%= notice %></p>
+<% end %>
+<% if alert %>
+  <p class="alert alert-danger"><%= alert %></p>
+<% end %>
+<div id="wrapper">
+	
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		<div class="navbar-header"><%= link_to "Админ панель Интелстрой", admin_path, class: "navbar-brand" %></div>
+		<% if user_signed_in? %>
+		<ul class="nav navbar-right top-nav">
+				<li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <%= current_user.email %> <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <%= link_to edit_user_registration_path do %>
+							    <i class="fa fa-user"></i> <%= current_user.email %></b>
+							<% end %>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                        	<%= link_to destroy_user_session_path, method: :delete do %>
+							    <i class="fa fa-fw fa-power-off"></i> Выйти</b>
+							<% end %>
+                        </li>
+                    </ul>
+                </li>
+		</ul>	
+		<% end %>
+	<% if user_signed_in? %>	
+	<div class="collapse navbar-collapse navbar-ex1-collapse">
+		<ul class="nav navbar-nav side-nav">
+			<li>
+                <%= link_to "Dashboard", admin_path %>
+            </li>
+            <li>
+                <%= link_to "Категории", categories_path %>
+            </li>
+            <li>
+                <%= link_to "Записи", posts_path %>
+            </li>
+            <li>
+                <%= link_to "О компании", companies_path %>
+            </li>
+            <li>
+                <%= link_to "Контакты", companycontacts_path %>
+            </li>
+            <li>
+                <%= link_to "Главная страница", mains_path %>
+            </li>
+            <li>
+                <%= link_to "Пользователи", admin_users_path %>
+            </li>
+		</ul>
+	</div>
+	<% end %>
+	</nav>
+
+
+	<div id="page-wrapper">
+		<div class="container-fluid">
+			<%= yield %>
+		</div>
+	</div>
+	<% #link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %>
+	<% #link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %>
+	<% #link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+	<% #link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+
+	
+</div>
 </body>
 </html>
