--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_for(@post, multipart: true) do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
@@ -13,41 +14,41 @@
 
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :slug %><br>
-    <%= f.text_field :slug %>
+    <%= f.text_field :slug, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_field :description %>
+    <%= f.text_field :description, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :keywords %><br>
-    <%= f.text_field :keywords %>
+    <%= f.text_field :keywords, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :punktmenu %><br>
-    <%= f.text_field :punktmenu %>
+    <%= f.text_field :punktmenu, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :image %><br>
-    <%= f.file_field :image %>
+    <%= f.file_field :image, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :body %><br>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :address %>(только для проектов)<br>
-    <%= f.text_field :address %>
+    <%= f.text_field :address, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :network_id %><br>
-	<%= collection_select(:post, :network_id, Category.all, :id, :title, {:prompt => true}) %>
+	<%= collection_select(:post, :network_id, Category.all, :id, :title, {:prompt => true}, class: "form-control") %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="actions" style="margin: 25px 0;">
+    <%= f.submit "Сохранить", :class => "btn btn-lg btn-primary" %>
   </div>
 <% end %>
