--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,25 @@
+<div class="row">   
+                    <div class="col-lg-12">
+                    
+<h1 class="page-header"><%= @post.title %></h1>
+                        <ol class="breadcrumb">
+                            <li class="active">
+                                <i class="fa fa-dashboard"></i> <%= link_to "Админка", admin_path %>
+                            </li>
+                            <li class="active">
+                                <i class="fa fa-dashboard"></i> <%= link_to "Записи", posts_path %>
+                            </li>
+                            <li class="active">
+                                <i class="fa fa-dashboard"></i> <%= @post.title %>
+                            </li>
+                        </ol>
+<div class="row">
+<div class="col-lg-12">
+
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Title:</strong>
+  <strong>Название:</strong>
   <%= @post.title %>
 </p>
 
@@ -11,29 +29,30 @@
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>meta Description:</strong>
   <%= @post.description %>
 </p>
 
 <p>
-  <strong>Keywords:</strong>
+  <strong>meta Keywords:</strong>
   <%= @post.keywords %>
 </p>
 
 <p>
-  <strong>Punktmenu:</strong>
+  <strong>Пункт меню:</strong>
   <%= @post.punktmenu %>
 </p>
 
 <p>
-  <strong>Image:</strong>
-  <%= @post.image %>
+  <strong>Картинка:</strong>
+  <%= image_tag @post.image %>
 </p>
 
 <p>
-  <strong>Body:</strong>
+  <strong>Контент:</strong>
   <%= @post.body %>
 </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Изменить', edit_post_path(@post) %> |
+<%= link_to 'Назад', posts_path %>
+</div></div></div></div>
